lox-tests/tests/for/statement_increment.stderr
ERROR: at '{': Expected expression, got LeftBrace
 --> 2:24
  |
2 | for (var a = 1; a < 2; {}) {}
  |                        ^
